# He-CRmodel-APPJ-Te-ne-measure

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.agents/: ROUTER.md
.agents/rules/: data-agent.md  docs-agent.md  harness-agent.md  model-agent.md  schema-agent.md  solver-agent.md  test-agent.md
configs/: lee2020_minimal_scan.json
data/: README.md
data/canonical/: README.md  lee2020_table_ii_ai.json
data/raw_sources/: README.md
data/staged/: README.md  lee2020_table_i.json  lee2020_table_i_reference.json  manual_review_required.json  nist_hei_join_report.json  nist_hei_levels.json  nist_hei_lines.json  nist_hei_lines_clean.csv  spectral_lines_seed.json
docs/devlog/: ACTIVE_ISSUES.md  AGENT_ISSUE_ROUTER.md  DECISIONS.md  ERROR_LOG.md  HANDOFF.md  ISSUE_DASHBOARD.md  ISSUE_DEPENDENCY_GRAPH.md  (+2 more)
harnesses/: audit_data.py  minimal_scan.py
schemas/: concrete_channel.schema.json  config.schema.json  level.schema.json  rate_payload.schema.json  reaction.schema.json  reaction_template.schema.json  spectral_line.schema.json
scripts/: clean_nist_lines_csv.py  print_nist_levels.py  stage_nist_asd.py
tests/: test_clean_nist_lines_csv.py  test_cli.py  test_data_layout.py  test_levels.py  test_ls_term_mapping.py  test_network_interfaces.py  test_nist_levels_parse.py  test_nist_registries_pipeline.py  test_print_all_levels.py  test_rate_payload_registry.py  test_rates.py  test_reaction_audit.py  test_reaction_network_builder.py  test_registries.py  test_solver_sanity.py  test_spectra.py  test_stoichiometry.py
(+28 files in other folders)
