[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "he-cr-model"
version = "0.1.0"
description = "Lee 2020 helium APPJ CR-model reproduction scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
he-cr = "he_cr_model.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
